--- a/Listen_And_Read/PetsMe/Views/Base.lproj/Main.storyboard
+++ b/Listen_And_Read/PetsMe/Views/Base.lproj/Main.storyboard
@@ -1044,6 +1044,7 @@
                                                                 <size key="customSize" width="250" height="250"/>
                                                                 <connections>
                                                                     <outlet property="bookByCategory_View" destination="R7P-SB-1Gv" id="5yg-dk-Ogb"/>
+                                                                    <segue destination="Eaf-YP-kpA" kind="show" id="x9A-Pr-Gaz"/>
                                                                 </connections>
                                                             </collectionViewCell>
                                                         </cells>
@@ -1097,6 +1098,166 @@
             </objects>
             <point key="canvasLocation" x="-2088.8671875" y="2497.9502196193262"/>
         </scene>
+        <!--Book Info View Controller-->
+        <scene sceneID="td3-IK-vzz">
+            <objects>
+                <viewController storyboardIdentifier="BookInfoViewController" id="Vf4-vb-kU5" customClass="BookInfoViewController" customModule="PetsMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cxl-oU-bLr">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="kyE-wT-HkF">
+                                <rect key="frame" x="20" y="90" width="984" height="880"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o5s-XY-wUE">
+                                        <rect key="frame" x="0.0" y="0.0" width="984" height="350"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Children" translatesAutoresizingMaskIntoConstraints="NO" id="b6Q-vd-cf4">
+                                                <rect key="frame" x="369" y="0.0" width="243" height="350"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="350" id="8p5-32-V5T"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G7l-lK-4iW">
+                                        <rect key="frame" x="0.0" y="350" width="984" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ung-c6-V8X">
+                                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="60" id="P0S-ol-Tk4"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6bQ-h9-iK6">
+                                                <rect key="frame" x="60" y="0.0" width="924" height="60"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="OF4-N3-6Kz"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZGI-WR-2d4">
+                                        <rect key="frame" x="0.0" y="410" width="984" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQY-06-bi2">
+                                                <rect key="frame" x="0.0" y="0.0" width="90" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="90" id="U6C-qW-Wjk"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Exx-4q-1NE">
+                                                <rect key="frame" x="90" y="0.0" width="894" height="60"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="m0i-7J-2nA"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YTG-cd-3ZQ">
+                                        <rect key="frame" x="0.0" y="470" width="984" height="60"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ier-Je-qq4">
+                                                <rect key="frame" x="0.0" y="0.0" width="90" height="60"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="90" id="XxR-9b-jab"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aWe-CC-pxE">
+                                                <rect key="frame" x="90" y="0.0" width="894" height="60"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="vHU-pd-fc0"/>
+                                        </constraints>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5on-Id-Ofc">
+                                        <rect key="frame" x="0.0" y="530" width="984" height="350"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iyl-RD-qlf">
+                                                <rect key="frame" x="0.0" y="0.0" width="120" height="350"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="120" id="QSG-Ys-6qa"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qxe-Z7-DM4">
+                                                <rect key="frame" x="120" y="0.0" width="864" height="350"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="350" id="mFe-oc-D6m"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FKB-c9-7gn">
+                                <rect key="frame" x="345" y="1010" width="334" height="68"/>
+                                <color key="backgroundColor" red="0.92549019610000005" green="0.47450980390000003" blue="0.3921568627" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="334" id="1dw-dp-ZQ5"/>
+                                    <constraint firstAttribute="height" constant="68" id="3W5-hn-k8k"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Read"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="30"/>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="button_Pressed:" destination="Vf4-vb-kU5" eventType="touchUpInside" id="rgx-JT-xeY"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="w6h-S0-p04"/>
+                        <color key="backgroundColor" red="0.96862745289999996" green="0.96470588450000005" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="w6h-S0-p04" firstAttribute="trailing" secondItem="kyE-wT-HkF" secondAttribute="trailing" constant="20" id="F5p-Sa-qOK"/>
+                            <constraint firstItem="kyE-wT-HkF" firstAttribute="top" secondItem="w6h-S0-p04" secondAttribute="top" constant="20" id="OGM-vS-lwy"/>
+                            <constraint firstItem="kyE-wT-HkF" firstAttribute="leading" secondItem="w6h-S0-p04" secondAttribute="leading" constant="20" id="UfX-4E-Twr"/>
+                            <constraint firstItem="FKB-c9-7gn" firstAttribute="centerX" secondItem="Cxl-oU-bLr" secondAttribute="centerX" id="j0C-6F-s4t"/>
+                            <constraint firstItem="FKB-c9-7gn" firstAttribute="leading" secondItem="w6h-S0-p04" secondAttribute="leading" constant="345" id="s4G-U9-nhh"/>
+                            <constraint firstItem="FKB-c9-7gn" firstAttribute="top" secondItem="kyE-wT-HkF" secondAttribute="bottom" constant="40" id="z1N-o1-p3v"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="ROX-60-Ftb"/>
+                    <connections>
+                        <outlet property="bookAuthor_Label" destination="Exx-4q-1NE" id="EJU-Df-uPf"/>
+                        <outlet property="bookCover_ImageView" destination="b6Q-vd-cf4" id="ylr-3S-uHX"/>
+                        <outlet property="bookGenre_Label" destination="aWe-CC-pxE" id="JdF-6v-cJt"/>
+                        <outlet property="bookSummary_Label" destination="Qxe-Z7-DM4" id="t6Z-vf-2OZ"/>
+                        <outlet property="bookTitle_Label" destination="6bQ-h9-iK6" id="68u-UP-gJg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KhO-eI-Qim" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1597" y="3234"/>
+        </scene>
         <!--Books List Table View Controller-->
         <scene sceneID="7xg-ZO-9os">
             <objects>
@@ -1121,6 +1282,9 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <connections>
+                                    <segue destination="Vf4-vb-kU5" kind="show" identifier="show" id="ivC-wf-8Fh"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <sections/>
@@ -1136,13 +1300,14 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AGC-cf-0i0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1326" y="2504"/>
+            <point key="canvasLocation" x="-2415" y="3234"/>
         </scene>
     </scenes>
     <resources>
         <image name="1" width="2000" height="2000"/>
         <image name="2" width="2000" height="2000"/>
         <image name="4" width="2000" height="2000"/>
+        <image name="Children" width="200" height="269"/>
         <image name="dot" width="54" height="54"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="person" catalog="system" width="128" height="117"/>
